                  possible falure in downstream PREPOBS_PREPACQC program since
                  it uses SQN to ensure indexing is correct when events are
                  written to PREPBUFR file. (Note: This failure could only
                  occur in runs that do not split PREPOBS_PREPDATA into
                  separate tasks (i.e., non-operational runs.)
      iw3unpbf.f (subroutine):
       - Added logic to handle new NASA/VIIRS (NPP) POES winds in tank NC005090
         (e.g., recognizes that they now exist, counts of reports with flagged
         QI values, counts of reports by satellite number). Added logic to
         properly handle GOES IR short-wave winds in tank NC005019 (e.g., new
         instrument type 19, process the quality information correctly). Added
         some missing logic which summarizes processing of NESDIS/AVHRR POES
         winds in tank NC005080 (e.g., counts of reports by satellite number).
         BENEFIT: NASA/VIIRS (NPP) POES winds, GOES IR short-wave winds and
                  NESDIS/AVHRR POES winds will all be translated properly from
                  the "satwnd" dumps.  (Although they will not be processed by
                  prepobs_prepdata they are listed by bufr_listdumps which uses
                  this same dump-interface subroutine.)
       - Now stores WMO bulletin header and originator in new output
         character*11 argument CBULL for aircraft data (only) (all blanks for
         all other data types for now). (Note: Previously, WMO bulletin
         originator had been stored in characters 1-4 of header reserve
         character word 1 and bulletin header was not stored.)
         BENEFIT: This information may be included in PREPBUFR files someday.


 Output changes:
 ---------------
  (For specific network changes see " Output changes" in Release Notes for that
   network, if that network executes this version of obsproc_prep.)


 Libraries:
 ----------
   w3nco   2.0.6 (all)