@@ -1,7 +1,7 @@
 C$$$  MAIN PROGRAM DOCUMENTATION BLOCK
 C
 C MAIN PROGRAM: PREPOBS_PREPDATA
-C   PRGMMR: KEYSER                ORG: NP22   DATE: 2015-03-11
+C   PRGMMR: KEYSER                ORG: NP22   DATE: 2015-04-08
 C
 C ABSTRACT: PREPARES DATA FOR USE IN ANALYSES FOR THE NDAS, NAM, GDAS,
 C   GFS, RAP (RAPID REFRESH), RTMA, AND URMA NETWORKS.  ALL ANALYSES
@@ -1122,6 +1122,10 @@ C         - Corrected bug which was not encoding it properly for AIRCAR
 C           type when SQN was > 99998.
 C         - Now encoded as missing rather than 99999 for types which do
 C           not store SQN.
+C 2015-04-08  D. A. Keyser -- Encodes new, unique report subtype (TSP)
+C     values into PREPBUFR file for AIRCAR types based on WMO bulletin
+C     header/originator (1-U.S. MDCRS, 2-Mexican MDCRS, 3-ADS-C MDCRS,
+C     99-default/unknown)
 C
 C USAGE:
 C   INPUT FILES:
@@ -2838,7 +2842,7 @@ C  IN INTERFACE WITH SUBROUTINE IW3UNPBF
      $ FLACMS,IACFTH,SUBSKP,JPGPSD,GWINDO,RASS,TWINDO,JPWDSD,IWWNDO,
      $ FLDMFR,WRMISS,SKGP45,JPASCD,IAWNDO,npkrpt
       NAMELIST/PARM/IUNIT
-      CALL W3TAGB('PREPOBS_PREPDATA',2015,0070,0061,'NP22')
+      CALL W3TAGB('PREPOBS_PREPDATA',2015,0098,0061,'NP22')
 C DETERMINE MACHINE WORD LENGTH (BYTES) FOR BOTH INTEGERS AND REALS
       CALL WORDLENGTH(LWI,LWR)
       PRINT 2213, LWI,LWR
@@ -2881,7 +2885,7 @@ C    CARDS FILE, JUST AFTER NAMELIST TASK, BY THE MAKE_PREPBUFR SCRIPT)
          PRINT 321, NET(1)
       END IF
   321 FORMAT(/37X,'WELCOME TO THE UNIVERSAL ',A14,' DATA PREPROCESSOR'/
-     $ 48X,'WCOSS VERSION CREATED 11 MAR 2015'/)
+     $ 48X,'WCOSS VERSION CREATED 08 APR 2015'/)
       PRINT 322, (IUNIT(I),I=1,8),IUNIT(16),IUNIT(17)
   322 FORMAT(//53X,'TABLE OF UNIT NUMBERS'/31X,
      $ 'INPUTS IN UNIT NUMBERS 11-50 - OUTPUTS IN UNIT NUMBERS 51-90'//
@@ -4673,7 +4677,7 @@ C$$$
      $ YSLIM
       COMMON/DATA/KOUNT,IDATE(4),IDAT10,MP_PROCESS,WRMISS
       COMMON/RPTHDR/SUBSET_d,STNID,HDR(2:MXWRDH)
-      COMMON/XTRHD2/CRES1,CRES2
+      COMMON/XTRHD2/CRES1,CRES2,CBULL
       COMMON/SKPSUB/SUBSKP(0:255,0:200)
       COMMON/DIRECT/OBS3(5,MXBLVL,7),OBS2(NUMOBS2),NOBS3(7),RDATA2(24)
       COMMON /BUFRLIB_MISSING/BMISS
@@ -4881,7 +4885,7 @@ C GRID IS POLAR STEREOGRAPHIC
 C$$$  SUBPROGRAM DOCUMENTATION BLOCK
 C
 C SUBPROGRAM:    RPTLBL
-C   PRGMMR: D. A. KEYSER     ORG: W/NMC22    DATE: 2015-03-11
+C   PRGMMR: D. A. KEYSER     ORG: W/NMC22    DATE: 2015-04-08
 C
 C ABSTRACT: FOR ALL REPORT TYPES, STORES WORDS 2 (LONGITUDE), 3
 C   (LATITUDE), 4 (REPORT D-TIME), 5 (RECEIPT TIME), 7 (DUMP REPORT
@@ -4941,6 +4945,10 @@ C     MONOLITHIC "AIRCAR" DUMP FILE - THIS CAUSES PREPACQC TO FAIL IN
 C     SERIAL PREPBUFR PROCESSING RUNS, E.G. IN SDMEDIT)
 C 2015-03-11  D. A. Keyser -- SQN (sequence number) now initialized as
 C     999990 instead of 99999.
+C 2015-04-08  D. A. Keyser -- Encodes new, unique report subtype (TSP)
+C     values into PREPBUFR file for AIRCAR types based on WMO bulletin
+C     header/originator (1-U.S. MDCRS, 2-Mexican MDCRS, 3-ADS-C MDCRS,
+C     99-default/unknown)
 C
 C USAGE:    CALL RPTLBL(CYCLET)
 C   INPUT ARGUMENT LIST:
@@ -4961,7 +4969,8 @@ C$$$
       SUBROUTINE RPTLBL(CYCLET)
       PARAMETER (MXWRDH = 15)
       PARAMETER (MAXOBS = 3500)
-      CHARACTER*8  STNID,SUBSET_d
+      CHARACTER*8  STNID,SUBSET_d,CRES1,CRES2
+      CHARACTER*11 CBULL
       LOGICAL  PROFILERinADPUPA
       INTEGER  IDATA(MAXOBS)
       COMMON/DATA/KOUNT,IDATE(4),IDAT10,MP_PROCESS,WRMISS
@@ -4970,6 +4979,7 @@ C$$$
       COMMON/UNITNO/NFILE,IUNIT(28)
       COMMON/LAUNCH/ALNCH
       COMMON/PFSWCH/PRFLER(4),PWINDO(4),PROFILERinADPUPA
+      COMMON/XTRHD2/CRES1,CRES2,CBULL
       DATA  XMISS/99999./, YMISS/99998.8/,IMISS/99999/
       EQUIVALENCE (RDATA,IDATA)
       HDR(2:MXWRDH) = XMISS
@@ -5030,8 +5040,18 @@ C ACARS REPORT SEQUENCE NUMBER FOUND
                END IF
             ENDDO
          END IF
+  856    CONTINUE
+C DUMP REPORT SUBTYPE GOES IN HDR(8) (for ACARS, based on WMO bulletin
+C  header and originator)
+         HDR(8) = 99.    ! Unknown (default)
+         IF(CBULL.EQ.'IUAX02 KARP') THEN
+            HDR(8) = 1.  ! U.S. MDCRS
+         ELSE IF(CBULL.EQ.'IUAX01 MMMX') THEN
+            HDR(8) = 2.  ! Mexican MDCRS
+         ELSE IF(CBULL.EQ.'IUAX06 KARP') THEN
+            HDR(8) = 3.  ! ADS-C MDCRS
+         END IF
       END IF
-  856 CONTINUE
 C RECEIPT TIME GOES IN HDR(5)
       HDR(5) = RDATA(11)
 C ELEVATION GOES IN HDR(10)
@@ -10083,6 +10103,7 @@ C$$$
       CHARACTER*9  TSLTT1,TSLTT2,TSLTB1,TSLTB2
       CHARACTER*10 MSLTT1,ZSLTT1,MSLTT2,ZSLTT2,MSLTB1,ZSLTB1,MSLTB2,
      $ ZSLTB2
+      CHARACTER*11  CBULL
       INTEGER  ICHN(35)
       COMMON/STRCTY/ICAT(MXLVL)
       COMMON/STRPWT/PWAT(MXTYPV,MXPWT)
@@ -10112,7 +10133,7 @@ C$$$
       COMMON/COUNT/KKTYPE(100:299)
       COMMON/SFCBFR/ALTIMR,PRSS
       COMMON/DIRECT/OBS3(5,MXBLVL,7),OBS2(NUMOBS2),NOBS3(7),RDATA2(24)
-      COMMON/XTRHD2/CRES1,CRES2
+      COMMON/XTRHD2/CRES1,CRES2,CBULL
       DATA  ICHN/1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,
      $ 22,23,24,25,26,27,28,29,30,31,32,33,34,35/
       DATA YMISS/99998.8/,IMISS/99999/
@@ -10719,6 +10740,7 @@ C$$$
       PARAMETER (MAXOBS = 3500)
       PARAMETER (NUMOBS2 = 43)
       CHARACTER*8  STNID,CRES1,CRES2,SUBSET_d
+      CHARACTER*11 CBULL
       LOGICAL  AIRLND,SWNLND,RECSLM,AIFNOW,FLRECO,WRMISS
       REAL P(100)
       REAL(8)  BMISS
@@ -10746,7 +10768,7 @@ C$$$
      $ KSKAHM(6),KSKNOW(6),KSKDRP
       COMMON/LFMSFC/LFMAXI,LFMAXJ,FMESHL,FLONVT,FPOLEI,FPOLEJ,MARLND,
      $ JSURFM(12),JSURFW(12),FWINDO(12),PFRALT,npkrpt(12)
-      COMMON/XTRHD2/CRES1,CRES2
+      COMMON/XTRHD2/CRES1,CRES2,CBULL
       COMMON/DIRECT/OBS3(5,MXBLVL,7),OBS2(NUMOBS2),NOBS3(7),RDATA2(24)
       COMMON /BUFRLIB_MISSING/BMISS
       EQUIVALENCE  (IDATA,RDATA)
@@ -17068,7 +17090,7 @@ C  TABLE-A MESSAGE TYPES
      $ OB2(MOB2WD,MXBLVL),QMS(MQMSWD,MXBLVL),PGM(MPGMWD,MXBLVL),
      $ RSN(MPGMWD,MXBLVL),BTO(2,MXBLVL),RAD(5),IUNITG(2)
       COMMON/UNITNO/NFILE,IUNIT(28)
-      COMMON/XTRHD2/CRES1,CRES2
+      COMMON/XTRHD2/CRES1,CRES2,CBULL
       COMMON/DATA/DMY3,IDATE(4),IDAT10,MP_PROCESS,WRMISS
       COMMON/RPTHDR/SUBSET_d,STNID,HHDR(2:MXWRDH)
       COMMON/PREVSW/PREVEN
@@ -17078,6 +17100,7 @@ C  TABLE-A MESSAGE TYPES
 
       common /bitbuf/ maxbyt,ibit,ibay(12500),mbyt(32),mbay(12500,32)
       character*8  subset_d_last
+      CHARACTER*11 CBULL
       data SUBSET_d_last/'XXXXXXXX'/
       LOGICAL  SEPARATE_METARS
 
@@ -18145,9 +18168,17 @@ C  TIME, INDICATOR FOR CORRECTED OBSERVATION TIME, SATELLITE ID
 C  (SATELLITE DATA TYPES ONLY), PROCESS NUMBER FOR THIS MPI RUN, {"HDR"
 C  WORDS 2-29 (NOTE: SOME WORDS HERE ARE SKIPPED)}
       HDR(2) = HHDR(2)
-      IF(NINT(HDR(2)*100).EQ.36000) HDR(2) = 0.0 !change this if XOB
-                                                 !precision ever 
-                                                 !changes in BUFR table
+      NSCL0 = 2
+cvvvvvvvv
+c After linking to new BUFRLIB v11.0.0., can add the following to obtain
+c  NSCL0 - can then remove comment after "HDR(2) = 0.0" below
+ccccc call NEMSPECS(iunitp,'XOB',1,NSCL, NREF, NBTS, IRET)
+ccccc if(IRET.eq.0)  NSCL0 = NSCL
+c^^^^^^^^
+      IF(NINT(HDR(2)*100).EQ.360*10**NSCL0) HDR(2) = 0.0 !change this if
+                                                         !XOB precision
+                                                         !ever changes
+                                                         !in BUFR table 
       HDR(3) = HHDR(3)
       HDR(4) = HHDR(4)
       IF(SUBSET.EQ.'SATWND  ')  THEN
